# teletextimager

./: README.md  pyproject.toml
teletextimager/: hamming_8_4.py  teletextdecoder.py  teletextreadep1.py  teletextreadt42.py  teletextreadtti.py  teletextrenderpil.py
teletextimager/bits/: hamming_24_18.py
teletextimager/cli/: teletextimager.py
teletextimager/font-etsi/: G0_NOS_cs_sk.pbm  G0_NOS_de.pbm  G0_NOS_en.pbm  G0_NOS_en.pil  G0_NOS_et.pbm  G0_NOS_fr.pbm  G0_NOS_it.pbm  G0_NOS_lv_lt.pbm  G0_NOS_pl.pbm  G0_NOS_pt_es.pbm  G0_NOS_ro.pbm  G0_NOS_sr_hr_sl.pbm  G0_NOS_sv_fi_hu.pbm  G0_NOS_tr.pbm  G0_ar.pbm  G0_el.pbm  G0_he.pbm  G0_latin.pbm  G0_reduced.pbm  G0_reduced.pil  G0_ru_bg.pbm  G0_sr_hr.pbm  G0_uk.pbm  G1_con.pbm  G1_sep.pbm  G1_sep.pil  G2_ar.pbm  G2_cyr.pbm  G2_el.pbm  G2_latin.pbm  G3.pbm
teletextimager/reader/: __init__.py  readt42.py  readtti.py
